[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xRedUtils"
version = "2.4.0"
authors = [{ name="xRedCrystalx" }]
description = "Simple, general purpose functions in one place!"
requires-python = ">=3.12"
readme = "README.md"

classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",

    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/xRedCrystalx/xRedUtils"
Issues = "https://github.com/xRedCrystalx/xRedUtils/issues"

[tool.setuptools.packages.find]
include = [
    "xRedUtils",
    "xRedUtilsAsync",
    "xRedUtilsTests",
    "xRedUtilsTests.loaders"
]
exclude = ["TODO", "NOTES.txt", "assets"]

[tool.setuptools.package-data]
"xRedUtilsTests" = ["*.txt"]
